add new code rabbitmq sockerio and socketio client

--- a/env.example
+++ b/env.example
@@ -7,3 +7,5 @@ DB_NAME=chat_app
 JWT_SECRET=mysecretkey
 JWT_EXPIRED=15m
 JWT_REFRESH_EXPIRED=7d
+RABBITMQ_URL=amqp://localhost:5672
+SOCKET_PORT=4000
