--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.4.1",
+    "amqplib": "^0.10.4",
     "argon2": "^0.41.1",
     "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
@@ -48,6 +49,7 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
